# fftbench

./: README.md
Matlab/: Matlab_default  fft_driver.m  fft_test.m  job
cmake/Modules/: FindLibFFTW3.cmake  FindMKL.cmake
shared/: CMakeLists.txt  Makefile  config.doxy  fftbench.doxy
shared/scripts/: run_CUFFT_1024.sh  run_CUFFT_2D.sh  run_FFTW.sh  run_FFTW_2D.sh
shared/src/: CMakeLists.txt  fftbench.h  main.cpp  parseUtils.cpp  parseUtils.h
shared/src/CUFFT/: C2C_fft_driver.cpp  C2C_fft_driver.h  D2Z_fft_driver.cpp  D2Z_fft_driver.h  R2C_fft_driver.cpp  R2C_fft_driver.h  Z2Z_fft_driver.cpp  Z2Z_fft_driver.h  cufft_driver.h  cufftbench.cpp  cufftbench.h
shared/src/FFTW/: C2C_fft_driver.cpp  C2C_fft_driver.h  D2Z_fft_driver.cpp  D2Z_fft_driver.h  R2C_fft_driver.cpp  R2C_fft_driver.h  Z2Z_fft_driver.cpp  Z2Z_fft_driver.h  fftw_driver.h  fftwbench.cpp  fftwbench.h
shared/src/MKL/: C2C_fft_driver.cpp  C2C_fft_driver.h  R2C_fft_driver.cpp  R2C_fft_driver.h  Z2Z_fft_driver.cpp  Z2Z_fft_driver.h  fftbench_mkl_settings.h  mkl_driver.h  mklbench.cpp  mklbench.h
